version/derive/tests/ui_fail/unknown_field_in_version_attribute.stderr
error: Unknown argument `derive`
 --> tests/ui_fail/unknown_field_in_version_attribute.rs:7:50
  |
7 | #[version(n = 1, versioned = "VersionedMessage", derive = "Clone")]
  |                                                  ^^^^^^

error[E0412]: cannot find type `_VersionedMessageV1` in this scope
 --> tests/ui_fail/unknown_field_in_version_attribute.rs:5:1
  |
5 | declare_versioned!(VersionedMessage 1..2);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `declare_versioned` (in Nightly builds, run with -Z macro-backtrace for more info)
